crates/glyph-cli/tests/corpus/valid/freeform_quality.glyph
skill demo()
    description: "Demo skill for freeform sections."
    quality:
        require accuracy
        avoid stale_references
        context "We run on monorepos."
        "Prefer minimal diffs."
    flow:
        "Investigate."
