crates/glyph-cli/tests/corpus/invalid/freeform_inline_marker.glyph
skill demo()
    description: "Demo."
    goal: require
    flow:
        "Do."
